[gd_scene load_steps=18 format=2]

[ext_resource path="res://Display Scenes/LessonFive.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Lesson/LessonNormal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Lesson/ExerciseHover.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Lesson/ExampleHover.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Dynamic Fonts/Header.tres" type="DynamicFont" id=5]
[ext_resource path="res://Placeholder/BG2.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Dynamic Fonts/Lesson Content.tres" type="DynamicFont" id=7]
[ext_resource path="res://Fonts/Dynamic Fonts/Normal Text.tres" type="DynamicFont" id=8]
[ext_resource path="res://Sprites/Buttons/Interface Buttons/Listen.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Buttons/Interface Buttons/ListenHover.png" type="Texture" id=10]
[ext_resource path="res://Object Scenes/InOverlay.tscn" type="PackedScene" id=12]
[ext_resource path="res://Object Scenes/BackButton.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sprites/Buttons/Lesson/ExampleNormal.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Buttons/Lesson/ExerciseNormal.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Buttons/Lesson/LessonHover.png" type="Texture" id=17]
[ext_resource path="res://Fonts/ProductSans-Bold.ttf" type="DynamicFontData" id=18]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 2
outline_color = Color( 0.0509804, 0.482353, 0.419608, 1 )
font_data = ExtResource( 18 )

[node name="LessonFive" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1032, -142 )
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -242.0
margin_bottom = -50.0

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
margin_right = 988.0
margin_bottom = 651.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/Main"]
margin_right = 988.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 5 )
text = "Reading Holiday Story"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="MarginContainer/Main"]
margin_top = 83.0
margin_right = 988.0
margin_bottom = 147.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 8 )
text = "Membaca Cerita Liburan"
align = 1

[node name="LessonContent" type="RichTextLabel" parent="MarginContainer/Main"]
visible = false
margin_top = 151.0
margin_right = 988.0
margin_bottom = 651.0
rect_min_size = Vector2( 0, 500 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[b]Cerita Liburan[/b]
Cerita liburan menceritakan tentang kejadian di masa lalu. Oleh karena 
itu, kata kerja yang digunakan dalam cerita menggunakan kata kerja
[b][color=lime]Past Tense[/color][/b] (Verb 2).

[b]Memahami Informasi dalam Cerita Liburan[/b]
Seperti dalam materi sebelumnya, kamu dapat mengambil informasi
dari cerita liburan seperti [color=yellow]holiday destination, companion, activity, [/color]dan
[color=yellow]impression.[/color]"
text = "Cerita Liburan
Cerita liburan menceritakan tentang kejadian di masa lalu. Oleh karena 
itu, kata kerja yang digunakan dalam cerita menggunakan kata kerja
Past Tense (Verb 2).

Memahami Informasi dalam Cerita Liburan
Seperti dalam materi sebelumnya, kamu dapat mengambil informasi
dari cerita liburan seperti holiday destination, companion, activity, dan
impression."
fit_content_height = true

[node name="ExampleContent" type="RichTextLabel" parent="MarginContainer/Main"]
margin_top = 151.0
margin_right = 988.0
margin_bottom = 651.0
rect_min_size = Vector2( 0, 500 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[b]Read the following story and fill in the blanks with the words below![/b]
[center]Tony and his family _____ to cinema in the last holiday. They
______ a superhero movie. The movie was very _______. Tony
______ a big pop corn. They had a lot of ______ in the holiday."
text = "Read the following story and fill in the blanks with the words below!
Tony and his family _____ to cinema in the last holiday. They
______ a superhero movie. The movie was very _______. Tony
______ a big pop corn. They had a lot of ______ in the holiday."

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main/ExampleContent"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -396.0
margin_top = -125.0
margin_right = 396.0

[node name="Label" type="Label" parent="MarginContainer/Main/ExampleContent/VBoxContainer"]
margin_right = 792.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Click The Words Below"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Main/ExampleContent/VBoxContainer"]
margin_top = 49.0
margin_right = 792.0
margin_bottom = 110.0
alignment = 1

[node name="a" type="Button" parent="MarginContainer/Main/ExampleContent/VBoxContainer/HBoxContainer"]
margin_right = 219.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 7 )
text = "[interesting]"
flat = true

[node name="a2" type="Button" parent="MarginContainer/Main/ExampleContent/VBoxContainer/HBoxContainer"]
margin_left = 223.0
margin_right = 406.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 7 )
text = "[watched]"
flat = true

[node name="a3" type="Button" parent="MarginContainer/Main/ExampleContent/VBoxContainer/HBoxContainer"]
margin_left = 410.0
margin_right = 568.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 7 )
text = "[bought]"
flat = true

[node name="a4" type="Button" parent="MarginContainer/Main/ExampleContent/VBoxContainer/HBoxContainer"]
margin_left = 572.0
margin_right = 694.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 7 )
text = "[went]"
flat = true

[node name="a5" type="Button" parent="MarginContainer/Main/ExampleContent/VBoxContainer/HBoxContainer"]
margin_left = 698.0
margin_right = 792.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 7 )
text = "[fun]"
flat = true

[node name="Audio" type="TextureButton" parent="MarginContainer/Main/ExampleContent"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 34.0
margin_right = 128.0
margin_bottom = 98.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="ExerciseContent" type="RichTextLabel" parent="MarginContainer/Main"]
visible = false
margin_top = 655.0
margin_right = 988.0
margin_bottom = 1155.0
rect_min_size = Vector2( 0, 500 )
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[b][color=yellow]Read the following story and fill in the blanks with the words below! Then write down the information you find![/color][/b]
[center]Harry _____ to Carita Beach with his family. The beach was beautiful. Harry _____ a big sandcastle at the beach. They also went _____ and swimming. That was a _____ holiday."
text = "Read the following story and fill in the blanks with the words below! Then write down the information you find!
Harry _____ to Carita Beach with his family. The beach was beautiful. Harry _____ a big sandcastle at the beach. They also went _____ and swimming. That was a _____ holiday."

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main/ExerciseContent"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -396.0
margin_top = -125.0
margin_right = 396.0

[node name="Label" type="Label" parent="MarginContainer/Main/ExerciseContent/VBoxContainer"]
margin_right = 792.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Use These Words To Fill in The Blank"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Main/ExerciseContent/VBoxContainer"]
margin_top = 49.0
margin_right = 792.0
margin_bottom = 110.0
alignment = 1

[node name="a" type="Button" parent="MarginContainer/Main/ExerciseContent/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 263.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 7 )
text = "[wonderful]"
flat = true

[node name="a2" type="Button" parent="MarginContainer/Main/ExerciseContent/VBoxContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 389.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 7 )
text = "[went]"
flat = true

[node name="a3" type="Button" parent="MarginContainer/Main/ExerciseContent/VBoxContainer/HBoxContainer"]
margin_left = 393.0
margin_right = 604.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 7 )
text = "[snorkeling]"
flat = true

[node name="a4" type="Button" parent="MarginContainer/Main/ExerciseContent/VBoxContainer/HBoxContainer"]
margin_left = 608.0
margin_right = 739.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 7 )
text = "[made]"
flat = true

[node name="NavButton" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -292.0
margin_right = -25.0
margin_bottom = 292.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Lesson" type="TextureButton" parent="NavButton"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 17 )
expand = true
stretch_mode = 3

[node name="Example" type="TextureButton" parent="NavButton"]
margin_top = 196.0
margin_right = 192.0
margin_bottom = 388.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="Exercise" type="TextureButton" parent="NavButton"]
margin_top = 392.0
margin_right = 192.0
margin_bottom = 584.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="BackButton" parent="." instance=ExtResource( 13 )]
margin_right = 114.0
margin_bottom = 114.0
targetScene = "LessonMenu"

[node name="InOverlay" parent="." instance=ExtResource( 12 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="MarginContainer/Main/ExampleContent/VBoxContainer/HBoxContainer/a" to="." method="_on_a_button_down"]
[connection signal="button_down" from="MarginContainer/Main/ExampleContent/VBoxContainer/HBoxContainer/a2" to="." method="_on_a2_button_down"]
[connection signal="button_down" from="MarginContainer/Main/ExampleContent/VBoxContainer/HBoxContainer/a3" to="." method="_on_a3_button_down"]
[connection signal="button_down" from="MarginContainer/Main/ExampleContent/VBoxContainer/HBoxContainer/a4" to="." method="_on_a4_button_down"]
[connection signal="button_down" from="MarginContainer/Main/ExampleContent/VBoxContainer/HBoxContainer/a5" to="." method="_on_a5_button_down"]
[connection signal="button_down" from="MarginContainer/Main/ExampleContent/Audio" to="." method="_on_Audio_button_down"]
[connection signal="button_down" from="NavButton/Lesson" to="." method="_on_Lesson_button_down"]
[connection signal="button_down" from="NavButton/Example" to="." method="_on_Example_button_down"]
[connection signal="button_down" from="NavButton/Exercise" to="." method="_on_Exercise_button_down"]
